alpm-types/src/relation/snapshots/soname::invalid_sonamev1_parser@case_4.snap
---
source: alpm-types/src/relation/soname.rs
---
error: invalid ELF architecture
 | 
 | noarchitecture.so=1-
 |                     ^ expected `32 or 64`
